# src/main/java/nl/ictu/controller/v1/ExchangeIdentifier.java
@@ -1,28 +1,19 @@
 package nl.ictu.controller.v1;
 
 import nl.ictu.psuedoniemenservice.generated.server.api.ExchangeIdentifierApi;
-import nl.ictu.psuedoniemenservice.generated.server.model.WsExchangeIdentifierForIdentifierRequest;
 import nl.ictu.psuedoniemenservice.generated.server.model.WsExchangeTokenForIdentifier200Response;
-import nl.ictu.psuedoniemenservice.generated.server.model.WsIdentifier;
-import nl.ictu.psuedoniemenservice.generated.server.model.WsIdentifierTypes;
+import nl.ictu.psuedoniemenservice.generated.server.model.WsGetTokenRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import static org.springframework.http.HttpStatus.NOT_IMPLEMENTED;
 
 @RestController
 public class ExchangeIdentifier implements ExchangeIdentifierApi, VersionOneController {
 
-
     @Override
-    public ResponseEntity<WsExchangeTokenForIdentifier200Response> exchangeIdentifierForIdentifier(final WsExchangeIdentifierForIdentifierRequest wsExchangeIdentifierForIdentifierRequest) {
+    public ResponseEntity<WsExchangeTokenForIdentifier200Response> exchangeIdentifierForIdentifier(final String callerOIN, WsGetTokenRequest wsGetTokenRequest) {
 
-        final WsIdentifier wsIdentifier = new WsIdentifier()
-            .identifierType(WsIdentifierTypes.BSN)
-            .identifierValue("476288216");
-
-        final WsExchangeTokenForIdentifier200Response wsExchangeTokenForIdentifier200Response = new WsExchangeTokenForIdentifier200Response();
-
-        wsExchangeTokenForIdentifier200Response.identifier(wsIdentifier);
-
-        return ResponseEntity.ok(wsExchangeTokenForIdentifier200Response);
+        return ResponseEntity.status(NOT_IMPLEMENTED).build();
     }
 }
