# src/main/java/nl/ictu/controller/v1/ExchangeToken.java
@@ -2,40 +2,46 @@ package nl.ictu.controller.v1;
 
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
+import nl.ictu.Token;
 import nl.ictu.psuedoniemenservice.generated.server.api.ExchangeTokenApi;
 import nl.ictu.psuedoniemenservice.generated.server.model.WsExchangeTokenForIdentifier200Response;
 import nl.ictu.psuedoniemenservice.generated.server.model.WsExchangeTokenForIdentifierRequest;
-import nl.ictu.psuedoniemenservice.generated.server.model.WsGetTokenRequest;
+import nl.ictu.psuedoniemenservice.generated.server.model.WsIdentifier;
+import nl.ictu.psuedoniemenservice.generated.server.model.WsIdentifierTypes;
 import nl.ictu.service.Cryptographer;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+@Slf4j
 @RequiredArgsConstructor
 @RestController
 public class ExchangeToken implements ExchangeTokenApi, VersionOneController {
 
     private final Cryptographer cryptographer;
 
-    @SneakyThrows
     @Override
-    public ResponseEntity<WsExchangeTokenForIdentifier200Response> exchangeTokenForIdentifier(final WsExchangeTokenForIdentifierRequest wsExchangeTokenForIdentifierRequest) {
+    @SneakyThrows
+    public ResponseEntity<WsExchangeTokenForIdentifier200Response> exchangeTokenForIdentifier(final String callerOIN, final WsExchangeTokenForIdentifierRequest wsExchangeTokenForIdentifierRequest) {
 
         final String encodedToken = cryptographer.decrypt(wsExchangeTokenForIdentifierRequest.getToken());
 
-        final WsGetTokenRequest decodedToken = TokenHelper.decode(encodedToken);
+        final Token token = TokenHelper.decode(encodedToken);
 
-        if (!decodedToken.getReceiverOin().equals(wsExchangeTokenForIdentifierRequest.getReceiverOin())) {
-            throw new RuntimeException("ReceiverOIN not the same");
+        log.info("Received token: " + token.toString());
+
+        if (!callerOIN.equals(token.getSinkOIN())) {
+            throw new RuntimeException("Sink OIN not the same");
         }
-
-        if (!decodedToken.getRequesterOin().equals(wsExchangeTokenForIdentifierRequest.getRequesterOin())) {
-            throw new RuntimeException("RequesterOIN not the same");
-        }
-
 
         final WsExchangeTokenForIdentifier200Response wsExchangeTokenForIdentifier200Response = new WsExchangeTokenForIdentifier200Response();
 
-        wsExchangeTokenForIdentifier200Response.setIdentifier(decodedToken.getIdentifier());
+        final WsIdentifier wsIdentifier = new WsIdentifier();
+
+        wsIdentifier.setIdentifierType(WsIdentifierTypes.fromValue(token.getIdentifierType()));
+        wsIdentifier.setIdentifierValue(token.getIdentifierValue());
+
+        wsExchangeTokenForIdentifier200Response.setIdentifier(wsIdentifier);
 
         return ResponseEntity.ok(wsExchangeTokenForIdentifier200Response);
 
