# src/main/java/nl/ictu/controller/v1/GetToken.java
@@ -2,12 +2,15 @@ package nl.ictu.controller.v1;
 
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import nl.ictu.Token;
 import nl.ictu.psuedoniemenservice.generated.server.api.GetTokenApi;
 import nl.ictu.psuedoniemenservice.generated.server.model.WsGetToken200Response;
 import nl.ictu.psuedoniemenservice.generated.server.model.WsGetTokenRequest;
 import nl.ictu.service.Cryptographer;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Date;
 
 @RestController
 @RequiredArgsConstructor
@@ -17,10 +20,20 @@ public class GetToken implements GetTokenApi, VersionOneController {
 
     @SneakyThrows
     @Override
-    public ResponseEntity<WsGetToken200Response> getToken(final WsGetTokenRequest wsGetTokenRequest) {
+    public ResponseEntity<WsGetToken200Response> getToken(final String callerOIN, WsGetTokenRequest wsGetTokenRequest) {
+
+        // check is callerOIN allowed to communicatie with sinkOIN
+
         final WsGetToken200Response wsGetToken200Response = new WsGetToken200Response();
 
-        final String plainTextToken = TokenHelper.encode(wsGetTokenRequest);
+        final Token token = new Token();
+
+        token.setCreationDate(new Date(System.currentTimeMillis()));
+        token.setSinkOIN(wsGetTokenRequest.getSinkOIN());
+        token.setIdentifierType(wsGetTokenRequest.getIdentifier().getIdentifierType().name());
+        token.setIdentifierValue(wsGetTokenRequest.getIdentifier().getIdentifierValue());
+
+        final String plainTextToken = TokenHelper.encode(token);
 
         wsGetToken200Response.token(cryptographer.encrypt(plainTextToken));
 
